@@ -3,6 +3,9 @@
 date Version 3.00.16 (Beta 2)
 * Improved tolerance of wxBitmap properties to old project files.
   This resolves FS#78.
++ Added "kind" property to tools and added "tooltip" and "statusbar"
+  properties to the generated XRC. 
+  This resovles FS#79 — "Toggle buttons on toolbar."
 
 01-09-2007 Version 3.00.15 (Beta 2)
 + Added new splash screen.
